# SyclParallelSTL

./: CMakeLists.txt  FindSYCL.cmake  main.cpp
benchmarks/: CMakeLists.txt  benchmark.h  montecarloPI.cpp  nbody.cpp  nbody.cpp.tpl  std_sort.cpp  sycl_reduce.cpp
examples/: sycl_sample_01.cpp
include/sycl/: execution_policy
include/sycl/algorithm/: buffer_algorithms.hpp  sort.hpp
include/sycl/helpers/: sycl_namegen.hpp
tests/: CMakeLists.txt.in
tests/pstl-tests/: CMakeLists.txt  count_if.cpp  find.cpp  for_each_n.cpp  invalid_vector_iterators.cpp  reduce.cpp  transform.cpp
